# projet-m1

./: .gitignore  README.org  create_test_case.sh  install.sh  plan.org  run.sh  shell.nix  source.org
code/: BK.py  BKP_M.py  BKP_R.py  CLIQUES.py  CLIQUES_old.py  algo.py  benchmark.py  generate_graph.py  main.py  parser.py  plot.py  shell.nix  unit_test.py  utils.py
code/rust_cliques/: Cargo.toml
code/rust_cliques/src/: algo.rs  benchmark.rs  benchmark2.rs  main.rs  old_benchmark.rs  utils.rs
code/samples/: email-Enron.txt
domtutor-validator/: README.md  notes.org  script.py
domtutor-validator/config/: contest.json  db.yml  instance.json  users.json
domtutor-validator/repository/: config.yaml
domtutor-validator/secret/: 10.ans  100.in  101.in  102.ans  103.ans  104.ans  104.in  105.ans  106.ans  107.ans  107.in  108.ans  108.in  109.ans  109.in  11.ans  11.in  110.ans  112.in  114.in  115.in  116.in  119.ans  12.ans  12.in  120.ans  120.in  121.in  122.ans  122.in  123.in  124.ans  124.in  125.ans  125.in  126.in  127.in  128.ans  129.ans  129.in  (+127 more)
presentation/: presentation.bbl-SAVE-ERROR  presentation.bcf  presentation.bcf-SAVE-ERROR  presentation.blg  presentation.fdb_latexmk  presentation.fls  presentation.nav  presentation.run.xml  presentation.snm  presentation.tex  presentation.vrb  references.bib
presentation/.auctex-auto/: presentation.el  references.el
python/: BK.py  BKP_M.py  BKP_R.py  CLIQUES.py  algo.py  unit_test.py
rapport/: biblio.bib  rapport.aux  rapport.out  rapport.tex  rapport.toc
rapport/auto/: rapport.el
rust/src/: main.rs
(+139 files in other folders)
