[package]
name = "rust_cliques"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1"
indicatif = "0.17.8"
rand = "0.8.5"

[[bin]]
name = "interactive"
path = "src/main.rs"

[[bin]]
name = "benchmark"
path = "src/benchmark.rs"
